# LibReMidi_jll

./: .gitmodules  CMakeLists.txt
src/: libremidi_cxxwrap.cpp
